--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.2",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
+    "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "fontawesome": "^5.6.3",
