--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "fontawesome": "^5.6.3",
+    "jquery": "^3.6.3",
+    "sweetalert2": "^11.4.8",
     "vue": "^3.2.13",
+    "vue-cryptojs": "^2.3.1",
     "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.5",
+    "vue3-simple-alert": "^1.0.4",
     "vuelidate": "^0.7.7"
   },
   "devDependencies": {
