--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5",
     "vue3-simple-alert": "^1.0.4",
-    "vuelidate": "^0.7.7"
+    "vuelidate": "^0.7.7",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
